# llm-summary

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: api.md  architecture.md  bug-triage.md  build-learn.md  cache_ab_decision.md  cgc-benchmark.md  container-detection.md  database.md  design-llm-first.md  extending.md  indirect-call-analysis.md  link-unit-analysis.md  llm-prompts.md  ucsan-harness.md
prompts/: allocation.txt  indirect_call.txt  stdlib.txt
scripts/: ab_test_cache.sh  batch_build_learn.py  batch_call_graph_gen.py  batch_code_contract.py  batch_container_detect.py  batch_discover_link_units.py  batch_rebuild.py  batch_scan_targets.py  batch_summarize.py  batch_validate.py  batch_verify.py  cache_ab_test.py  cgc_evaluate.py  cgc_extract_ground_truth.py  cgc_prepare.py  cgc_run.sh  clone_gpr_projects.py  code_contract_eval.py  contract_pipeline.py  dump_container_results.py  fix_compile_commands.py  gpr_projects.json  gpr_utils.py  guess_language.py  juliet_eval.py  run_ollama_analysis.sh  run_project.sh  run_thoroupy.sh  update_gpr_projects.py
tests/: __init__.py  test_annotate_source.py  test_assembly_checker.py  test_assembly_utils.py  test_autotools_actions.py  test_autotools_builder.py  test_cfg_dump.py  test_code_contract_checker.py  test_code_contract_chunking.py  test_code_contract_db.py  test_code_contract_features.py  test_code_contract_models.py  test_code_contract_struggle.py  test_constants.py  test_contract_check.py  test_db.py  test_extractor.py  test_json_utils.py  test_link_units_pipeline.py  test_llm.py  test_models.py  (+7 more)
(+172 files in other folders)
